<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">Sunshine</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="invalid_preferences">Invalid Preferences</string>

    <string name="preference_zip_code_title">Zip Code</string>
    <string name="preference_zip_code_default" translatable="false">94040</string>
    <string name="preference_zip_code_key" translatable="false">preference_zip_code</string>

    <string name="preference_country_code_default">US</string>
    <string name="preference_country_code_key">preference_country_code</string>
    <string name="preference_country_code_title">Country Code</string>

    <string name="preference_temperature_unit_key">preference_temperature_unit</string>
    <string name="preference_temperature_unit_title">Temperature Unit</string>
    <string name="preference_temperature_unit_entry_celsius">Celsius</string>
    <string name="preference_temperature_unit_entry_fahrenheit">Fahrenheit</string>
    <string name="preference_temperature_unit_entry_value_metric">metric</string>
    <string name="preference_temperature_unit_entry_value_imperial">imperial</string>
    
    <string name="action_show_location">Show Location</string>
    <string name="text_plain">text/plain</string>
    <string name="hashtag">#sunshine</string>

    <string name="degrees_symbol">\u00B0</string>
    <string name="account_type">chiragaggarwal.net</string>
    <string name="preference_show_notifications_key">preference_show_notifications</string>
    <string name="preference_show_notifications_summary">Notifications</string>
</resources>
